removed settings form git

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ sportsio/staticfiles/
 # Ignore media directory
 sportsio/media/
 
-
+sportsio/sportsio/settings.py
 
 # Ignoring Pycaches from creating conflicts
 
